More work on conversion to WASM Standalone

--- a/.github/workflows/build-application-client.yml
+++ b/.github/workflows/build-application-client.yml
@@ -1,11 +1,11 @@
-name: build-app-binaries
+name: build-application-client
 
 on:
   workflow_call:
 
 jobs:
-  build-app-binaries:
-    name: Build application binaries
+  build-app-client:
+    name: Build application client
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -16,19 +16,19 @@ jobs:
         with:
           dotnet-version: 8
 
-      - name: Build publishable application binaries
+      - name: Build publishable application client
         run: |
           dotnet workload restore  
           dotnet publish --configuration Release
         working-directory: ./src/GMCopilot/
 
-      - name: Zip publishable application binaries
+      - name: Zip publishable application client
         run: |
-          zip -r gmcopilot.zip .
+          zip -r gmcopilot-client.zip .
         working-directory: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish
 
-      - name: Upload application binaries as workflow artifact
+      - name: Upload application client as workflow artifact
         uses: actions/upload-artifact@v3
         with:
-          name: gmcopilot
-          path: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish/gmcopilot.zip
+          name: gmcopilot-client
+          path: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish/gmcopilot-client.zip
