--- a/.github/workflows/deploy-application-infrastructure.yml
+++ b/.github/workflows/deploy-application-infrastructure.yml
@@ -56,12 +56,12 @@ on:
         required: true
   
     outputs:
-      applicationUrl:
-        description: "The endpoint of the deployed application"
-        value: ${{ jobs.deploy-application-infrastructure.outputs.applicationUrl }}
-      openAiServiceEndpoint:
-        description: "The endpoint of the deployed OpenAI service"
-        value: ${{ jobs.deploy-application-infrastructure.outputs.openAiServiceEndpoint }}
+      staticWebAppName:
+        description: "The name of the Static Web Application that the client is deployed to"
+        value: ${{ jobs.deploy-application-infrastructure.outputs.staticWebAppName }}
+      staticWebAppHostName:
+        description: "The host name of the Static Web Application that the client is deployed to"
+        value: ${{ jobs.deploy-application-infrastructure.outputs.staticWebAppHostName }}
 
 jobs:
   deploy-application-infrastructure:
@@ -69,8 +69,8 @@ jobs:
     environment: ${{ inputs.ENVIRONMENT }}
     runs-on: ubuntu-latest
     outputs:
-      applicationUrl: ${{ steps.deploy.outputs.applicationUrl }}
-      openAiServiceEndpoint: ${{ steps.deploy.outputs.openAiServiceEndpoint }}
+      staticWebAppName: ${{ steps.deploy.outputs.staticWebAppName }}
+      staticWebAppHostName: ${{ steps.deploy.outputs.staticWebAppHostName }}
 
     steps:
       - name: Download build artifacts
