--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,10 +16,10 @@ jobs:
   test-run-unit-tests:
     uses: ./.github/workflows/test-run-unit-tests.yml
 
-  build-app-binaries:
+  build-application-client:
     needs:
       - test-run-unit-tests
-    uses: ./.github/workflows/build-app-binaries.yml
+    uses: ./.github/workflows/build-application-client.yml
     
   build-armtemplates:
     uses: ./.github/workflows/build-armtemplates.yml
