Turn off Strip IL

--- a/src/GMCopilot/GMCopilot/GMCopilot.csproj
+++ b/src/GMCopilot/GMCopilot/GMCopilot.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RunAOTCompilation>true</RunAOTCompilation>
-    <WasmStripILAfterAOT>true</WasmStripILAfterAOT>
+    <WasmStripILAfterAOT>false</WasmStripILAfterAOT>
   </PropertyGroup>
 
   <ItemGroup>
