--- a/.github/workflows/build-application-client.yml
+++ b/.github/workflows/build-application-client.yml
@@ -2,6 +2,11 @@ name: build-application-client
 
 on:
   workflow_call:
+    inputs:
+      BUILD_CONFIGURATION:
+        description: 'The version to assign to the client'
+        type: string
+        default: 'Debug'
 
 jobs:
   build-app-client:
@@ -19,16 +24,16 @@ jobs:
       - name: Build publishable application client
         run: |
           dotnet workload restore  
-          dotnet publish --configuration Release
+          dotnet publish --configuration ${{ inputs.BUILD_CONFIGURATION }}
         working-directory: ./src/GMCopilot/
 
       - name: Zip publishable application client
         run: |
           zip -r gmcopilot-client.zip .
-        working-directory: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish
+        working-directory: ./src/GMCopilot/GMCopilot/GMCopilot/bin/${{ inputs.BUILD_CONFIGURATION }}/net8.0/publish
 
       - name: Upload application client as workflow artifact
         uses: actions/upload-artifact@v3
         with:
           name: gmcopilot-client
-          path: ./src/GMCopilot/GMCopilot/GMCopilot/bin/Release/net8.0/publish/gmcopilot-client.zip
+          path: ./src/GMCopilot/GMCopilot/GMCopilot/bin/${{ inputs.BUILD_CONFIGURATION }}/net8.0/publish/gmcopilot-client.zip
