--- a/.github/workflows/deploy-application-client.yml
+++ b/.github/workflows/deploy-application-client.yml
@@ -34,10 +34,16 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           client-id: ${{ secrets.AZURE_CLIENT_ID }} 
 
+      - name: Get static web app token
+        id: get-static-web-app-token
+        run: |
+          api_secret=$(az staticwebapp secrets list --name ${{ inputs.STATIC_WEB_APP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP_NAME }} | jq -r '.api')
+          echo "api_secret==$api_secret" >> "$GITHUB_OUTPUT"
+  
       - name: Build and publish
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ vars.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          azure_static_web_apps_api_token: ${{ steps.get-static-web-app-token.outputs.api_secret }}
           action: "upload"
           app_location: "src/GMCopilot/GMCopilot"
           output_location: "bin/wwwroot"
