--- a/.github/workflows/deploy-application-infrastructure.yml
+++ b/.github/workflows/deploy-application-infrastructure.yml
@@ -14,7 +14,15 @@ on:
       LOCATION:
         description: "The Azure region to deploy the application resources to"
         required: true
-        type: string          
+        type: string
+      RESOURCE_GROUP_NAME:
+        description: "The name of the resource group to deploy the application resources to"
+        required: true
+        type: string
+      BASE_RESOURCE_NAME:
+        description: "The base name of the application resources"
+        required: true
+        type: string 
       RESOURCE_GROUP_NAME_SHARED:
         description: "The name of the resource group that the shared resources are in"
         required: true
@@ -89,7 +97,7 @@ jobs:
         with:
           failOnStdErr: false
           deploymentName: 'app-${{ inputs.ENVIRONMENT }}-${{ github.action_ref }}-${{ github.run_number }}'
-          resourceGroupName: ${{ vars.RESOURCE_GROUP_NAME }}
+          resourceGroupName: ${{ inputs.RESOURCE_GROUP_NAME }}
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           template: ./applicationarmtemplate/application.json
           region: ${{ inputs.LOCATION }}
@@ -97,8 +105,8 @@ jobs:
           parameters: >
             location=${{ inputs.LOCATION }}
             environmentCode=${{ inputs.ENVIRONMENT }}
-            baseResourceName=${{ vars.BASE_RESOURCE_NAME }}
-            resourceGroupName=${{ vars.RESOURCE_GROUP_NAME }}
+            baseResourceName=${{ inputs.BASE_RESOURCE_NAME }}
+            resourceGroupName=${{ inputs.RESOURCE_GROUP_NAME }}
             resourceGroupNameShared=${{ inputs.RESOURCE_GROUP_NAME_SHARED }}
             baseResourceNameShared=${{ inputs.BASE_RESOURCE_NAME_SHARED }}
             buildVersion=${{ inputs.BUILD_VERSION }}
