Add output location for static web app deployment

--- a/.github/workflows/deploy-application-client.yml
+++ b/.github/workflows/deploy-application-client.yml
@@ -51,4 +51,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ steps.get-static-web-app-token.outputs.api_token }}
           action: "upload"
           app_location: "src/GMCopilot/GMCopilot"
+          output_location: "wwwroot"
           app_build_command: "dotnet publish -c Release -o bin"
