--- a/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
@@ -2,10 +2,13 @@
     "EntraId": {
         "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
         "Domain": "gmcopilot.onmicrosoft.com",
+        "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
         "ClientId": "0b27d73e-4428-49b0-b1f9-a4058a7203eb",
         "CallbackPath": "/signin-oidc",
-        "Scopes": "access_as_user",
         "SignUpSignInPolicyId": "susi",
         "ValidateAuthority": false
+    },
+    "Services": {
+        "access": "https://localhost:7144"
     }
 }
