--- a/src/GMCopilot/GMCopilot.AccessApi/appsettings.json
+++ b/src/GMCopilot/GMCopilot.AccessApi/appsettings.json
@@ -2,9 +2,11 @@
     "EntraId": {
         "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
         "Domain": "gmcopilot.onmicrosoft.com",
-        "ClientId": "a6c8241f-db5d-4477-b3c4-04a77beb3f1c",
+        "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
+        "ClientId": "0b27d73e-4428-49b0-b1f9-a4058a7203eb",
         "CallbackPath": "/signin-oidc",
-        "SignUpSignInPolicyId": "susi"
+        "SignUpSignInPolicyId": "susi",
+        "Scopes": "GMCopilot.User"
     },
     "Logging": {
         "LogLevel": {
