Seperate Core into Data project.

--- a/src/GMCopilot/GMCopilot.AccessApi/GMCopilot.AccessApi.csproj
+++ b/src/GMCopilot/GMCopilot.AccessApi/GMCopilot.AccessApi.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GMCopilot.Core\GMCopilot.Core.csproj" />
+    <ProjectReference Include="..\GMCopilot.Data\GMCopilot.Data.csproj" />
     <ProjectReference Include="..\GMCopilot.ServiceDefaults\GMCopilot.ServiceDefaults.csproj" />
   </ItemGroup>
 
