--- a/src/GMCopilot/GMCopilot/GMCopilot.csproj
+++ b/src/GMCopilot/GMCopilot/GMCopilot.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="MudBlazor" Version="6.11.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GMCopilot.Core\GMCopilot.Core.csproj" />
+  </ItemGroup>
+
 </Project>
