--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -121,6 +121,11 @@ jobs:
     with:
       ENVIRONMENT: Test
       STATIC_WEB_APP_NAME: ${{ needs.deploy-application-infrastructure-test.outputs.staticWebAppName }}
+      ENTRAID_AUTHORITY: ${{ vars.ENTRAID_AUTHORITY }}
+      ENTRAID_TENANT_ID: ${{ vars.ENTRAID_TENANT_ID }}
+      ENTRAID_DOMAIN: ${{ vars.ENTRAID_DOMAIN }}
+      ENTRAID_CLIENT_ID_CLIENT: ${{ vars.ENTRAID_CLIENT_ID_CLIENT }}
+      ACCESS_API_URL: ${{ needs.deploy-application-infrastructure-test.outputs.containerAppApiUrl }}
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
