--- a/.github/workflows/deploy-application-client.yml
+++ b/.github/workflows/deploy-application-client.yml
@@ -11,6 +11,26 @@ on:
         description: 'The name of the static web app to deploy the client to'
         required: true
         type: string
+      ENTRAID_AUTHORITY:
+        description: "The Entra ID Authority URL to use for authentication"
+        required: true
+        type: string
+      ENTRAID_TENANT_ID:
+        description: "The tenant ID of the Entra ID tenant to use for application authentication"
+        required: true
+        type: string
+      ENTRAID_DOMAIN:
+        description: "The domain name of the Entra ID tenant"
+        required: true
+        type: string
+      ENTRAID_CLIENT_ID_CLIENT:
+        description: "The client ID that the WASM client will used to connect to the Entra ID to perform application authentication"
+        required: true
+        type: string
+      ACCESS_API_URL:
+        description: "The address of the access API to use for application authentication"
+        required: true
+        type: string
     secrets:
       AZURE_TENANT_ID:
         description: 'The Azure tenant ID'
@@ -41,7 +61,12 @@ jobs:
 
       - name: Update appsettings.json
         run: |
-          # Output the current appsettings.json file
+          # Update the EntraID.Authority setting in the appsettings.json file using jq command
+          jq --arg authority "${{ inputs.ENTRAID_AUTHORITY }}" '.EntraID.Authority = $authority' src/GMCopilot/GMCopilot/wwwroot/appsettings.json > tmp.$$.json && mv tmp.$$.json src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+          jq --arg tenantid "${{ inputs.ENTRAID_TENANT_ID }}" '.EntraID.TenantId = $tenantid' src/GMCopilot/GMCopilot/wwwroot/appsettings.json > tmp.$$.json && mv tmp.$$.json src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+          jq --arg domain "${{ inputs.ENTRAID_DOMAIN }}" '.EntraID.Domain = $domain' src/GMCopilot/GMCopilot/wwwroot/appsettings.json > tmp.$$.json && mv tmp.$$.json src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+          jq --arg clientid "${{ inputs.ENTRAID_CLIENT_ID_CLIENT }}" '.EntraID.ClientId = $clientid' src/GMCopilot/GMCopilot/wwwroot/appsettings.json > tmp.$$.json && mv tmp.$$.json src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+          jq --arg accessapiurl "${{ inputs.ACCESS_API_URL }}" '.Services.Access = $accessapiurl' src/GMCopilot/GMCopilot/wwwroot/appsettings.json > tmp.$$.json && mv tmp.$$.json src/GMCopilot/GMCopilot/wwwroot/appsettings.json
           cat src/GMCopilot/GMCopilot/wwwroot/appsettings.json
 
       - name: Get static web app token
