--- a/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
@@ -9,6 +9,6 @@
         "ValidateAuthority": false
     },
     "Services": {
-        "access": "https://localhost:7144"
+        "Access": "https://localhost:7144"
     }
 }
