Update API scopes and enable calling web API from client

--- a/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
@@ -3,12 +3,14 @@
         "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
         "Domain": "gmcopilot.onmicrosoft.com",
         "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
-        "ClientId": "0b27d73e-4428-49b0-b1f9-a4058a7203eb",
+        "ClientId": "7ff3f349-5bf4-48c7-8ea7-6e5536d0ae51",
         "CallbackPath": "/signin-oidc",
         "SignUpSignInPolicyId": "susi",
         "ValidateAuthority": false
     },
     "Services": {
-        "Access": "https://localhost:7144"
+        "Access": {
+            "BaseAddress": "https://localhost:7144"
+        }
     }
 }
