--- a/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
@@ -1,4 +1,11 @@
 {
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
     "EntraId": {
         "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
         "Domain": "gmcopilot.onmicrosoft.com",
@@ -8,9 +15,10 @@
         "SignUpSignInPolicyId": "susi",
         "ValidateAuthority": false
     },
-    "Services": {
+    "Apis": {
         "Access": {
-            "BaseAddress": "https://localhost:7144"
+            "BaseAddress": "https://localhost:7144",
+            "Scope": "api://b1a02918-c873-4c7f-ba43-248171c138fe"
         }
     }
 }
