--- a/src/GMCopilot/GMCopilot.Data/GMCopilot.Data.csproj
+++ b/src/GMCopilot/GMCopilot.Data/GMCopilot.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GMCopilot.Core\GMCopilot.Core.csproj" />
+    <ProjectReference Include="..\GMCopilot.ServiceDefaults\GMCopilot.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
