--- a/.github/workflows/build-arm-templates.yml
+++ b/.github/workflows/build-arm-templates.yml
@@ -32,6 +32,22 @@ jobs:
         name: sharedarmtemplate
         path: ./infrastructure/bicep/shared.json
 
+    - name: Upload Shared ARM Template as workflow artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: sharedarmtemplate
+        path: ./infrastructure/bicep/shared.json
+
+    - name: Build Entra Id Bicep
+      run: |
+        bicep build ./infrastructure/bicep/entraid.bicep
+
+    - name: Upload Entra Id ARM Template as workflow artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: entraidarmtemplate
+        path: ./infrastructure/bicep/entraid.json
+
     - name: Build Application Bicep
       run: |
         bicep build ./infrastructure/bicep/application.bicep
