--- a/src/GMCopilot/GMCopilot.AppHost/GMCopilot.AppHost.csproj
+++ b/src/GMCopilot/GMCopilot.AppHost/GMCopilot.AppHost.csproj
@@ -11,7 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="8.0.1" />
     <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
