More work on Authorization

--- a/src/GMCopilot/GMCopilot.AccessApi/appsettings.json
+++ b/src/GMCopilot/GMCopilot.AccessApi/appsettings.json
@@ -1,12 +1,20 @@
 {
     "EntraId": {
+        "Instance": "https://gmcopilot.ciamlogin.com",
         "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
         "Domain": "gmcopilot.onmicrosoft.com",
         "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
         "ClientId": "7ff3f349-5bf4-48c7-8ea7-6e5536d0ae51",
         "CallbackPath": "/signin-oidc",
         "SignUpSignInPolicyId": "susi",
-        "Scopes": "GMCopilot.Read GMCopilot.ReadWrite"
+        "Scopes": {
+            "Read": [ "GMCopilot.Read", "GMCopilot.ReadWrite" ],
+            "Write": [ "GMCopilot.Read" ]
+        },
+        "AppPermissions": {
+            "Read": [ "GMCopilot.Read.All", "GMCopilot.ReadWrite.All" ],
+            "Write": [ "GMCopilot.ReadWrite.All" ]
+        }
     },
     "Logging": {
         "LogLevel": {
