--- a/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
+++ b/src/GMCopilot/GMCopilot/wwwroot/appsettings.json
@@ -6,15 +6,16 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "EntraId": {
-        "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
-        "Domain": "gmcopilot.onmicrosoft.com",
-        "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
-        "ClientId": "7ff3f349-5bf4-48c7-8ea7-6e5536d0ae51",
-        "CallbackPath": "/signin-oidc",
-        "SignUpSignInPolicyId": "susi",
-        "ValidateAuthority": false
-    },
+  "EntraId": {
+      "Instance": "https://gmcopilot.ciamlogin.com",
+      "Authority": "https://gmcopilot.ciamlogin.com/gmcopilot.onmicrosoft.com",
+      "Domain": "gmcopilot.onmicrosoft.com",
+      "TenantId": "07f7ba6e-6d72-412c-a589-9b73d6620bb3",
+      "ClientId": "7ff3f349-5bf4-48c7-8ea7-6e5536d0ae51",
+      "CallbackPath": "/signin-oidc",
+      "SignUpSignInPolicyId": "susi",
+      "ValidateAuthority": false
+  },
     "Apis": {
         "Access": {
             "BaseAddress": "https://localhost:7144",
