Work on Access API

--- a/src/GMCopilot/GMCopilot.AccessApi/GMCopilot.AccessApi.csproj
+++ b/src/GMCopilot/GMCopilot.AccessApi/GMCopilot.AccessApi.csproj
@@ -15,15 +15,16 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.6" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.40.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.6" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="2.19.0" />
-    <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.19.0" />
-    <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.19.0" />
-    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.19.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.19.1" />
+    <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.19.1" />
+    <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.19.1" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.19.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GMCopilot.ApiCore\GMCopilot.ApiCore.csproj" />
     <ProjectReference Include="..\GMCopilot.Core\GMCopilot.Core.csproj" />
     <ProjectReference Include="..\GMCopilot.Data\GMCopilot.Data.csproj" />
     <ProjectReference Include="..\GMCopilot.ServiceDefaults\GMCopilot.ServiceDefaults.csproj" />
