chore: Update test workflow to run unit tests for GMCopilot.Core and GMCopilot.Data

--- a/.github/workflows/test-run-unit-tests.yml
+++ b/.github/workflows/test-run-unit-tests.yml
@@ -22,18 +22,19 @@ jobs:
       - name: Run unit tests on ${{ matrix.project }}
         run: |
           dotnet test --configuration Release --logger trx
-        working-directory: ./src/GMCopilot/Tests/${{ matrix.project }}.Test/
+        working-directory: ./src/GMCopilot/Tests/Unit/${{ matrix.project }}.Test/
 
       - name: Upload test results for ${{ matrix.project }}
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.project }}.Test
-          path: ./src/GMCopilot/Tests/${{ matrix.project }}.Test/TestResults/*.trx
+          path: ./src/GMCopilot/Tests/Unit/${{ matrix.project }}.Test/TestResults/*.trx
 
       - name: Publish test results for ${{ matrix.project }}
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
             files: |
-              ./src/GMCopilot/Tests/${{ matrix.project }}.Test/TestResults/*.trx
+              ./src/GMCopilot/Tests/Unit/${{ matrix.project }}.Test/TestResults/*.trx
+            check_name: Unit tests ${{ matrix.project }}.Test
               
