--- a/src/GMCopilot/Tests/Unit/GMCopilot.AccessApi.Test/GMCopilot.AccessApi.Test.csproj
+++ b/src/GMCopilot/Tests/Unit/GMCopilot.AccessApi.Test/GMCopilot.AccessApi.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\GMCopilot.AccessApi\GMCopilot.AccessApi.csproj" />
+    <ProjectReference Include="..\..\..\GMCopilot.AccessApi\GMCopilot.AccessApi.csproj" />
   </ItemGroup>
 
 </Project>
