--- a/src/GMCopilot/Tests/Unit/GMCopilot.Data.Test/GMCopilot.Data.Test.csproj
+++ b/src/GMCopilot/Tests/Unit/GMCopilot.Data.Test/GMCopilot.Data.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\GMCopilot.Data\GMCopilot.Data.csproj" />
+    <ProjectReference Include="..\..\..\GMCopilot.Data\GMCopilot.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
