Added tests for AccessApi

--- a/.github/workflows/test-run-unit-tests.yml
+++ b/.github/workflows/test-run-unit-tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        project: ['GMCopilot.Core', 'GMCopilot.Data']
+        project: ['GMCopilot.Core', 'GMCopilot.Data', 'GMCopilot.AccessApi']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
