--- a/src/GMCopilot/Tests/Unit/GMCopilot.ApiCore.Test/GMCopilot.ApiCore.Test.csproj
+++ b/src/GMCopilot/Tests/Unit/GMCopilot.ApiCore.Test/GMCopilot.ApiCore.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GMCopilot.ApiCore\GMCopilot.ApiCore.csproj" />
+    <ProjectReference Include="..\..\..\GMCopilot.ApiCore\GMCopilot.ApiCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
