--- a/src/GMCopilot/GMCopilot.AppHost/GMCopilot.AppHost.csproj
+++ b/src/GMCopilot/GMCopilot.AppHost/GMCopilot.AppHost.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
@@ -10,18 +10,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GMCopilot.AccessApi\GMCopilot.AccessApi.csproj" />
   </ItemGroup>
+
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
 </Project>
